# cmforth

./: Cargo.toml  design.excalidraw  flake.nix  forth.f  renovate.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: main.yaml
cmforth/: Cargo.toml
cmforth/src/: error.rs  lib.rs
cmforth/src/interpreter/: thumbv7m.rs
cmforth/src/io/: thumbv7m.rs
examples/: qemu.rs
src/: interpreter.rs  io.rs  lib.rs  stack.rs  types.rs
src/interpreter/: sw.rs
