[package]
name = "cmforth"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.17", default-features = false }
cortex-m = { version = "0.7.7", optional = true }
heapless = { version = "0.9.2", optional = true }
log = "0.4.29"

[features]
cortex-m-arch = ["cortex-m", "heapless"]
std = ["heapless"]
default = ["std"]

[dev-dependencies]
cortex-m-rt = { version = "0.7.5" }
static_cell = { version = "2.1.1" }

[profile.dev]
debug = 1
codegen-units = 1
panic = "abort"
opt-level = 1

[profile.release]
debug = 1
codegen-units = 1
panic = "abort"
opt-level = 3
lto = "fat"
