[workspace]
members = ["cmforth", "platforms/*"]
default-members = ["cmforth"]
resolver = "2"

[workspace.dependencies]
cmforth = { path = "./cmforth" }
thiserror = { version = "2.0.17", default-features = false }
cortex-m = "0.7.7"
heapless = "0.9.2"
log = "0.4.29"
cortex-m-rt = "0.7.5"
static_cell = "2.1.1"

[profile.dev]
debug = 1
codegen-units = 1
panic = "abort"
opt-level = 1

[profile.release]
debug = 1
codegen-units = 1
panic = "abort"
opt-level = 3
lto = "fat"
